make executable w/ win32 api dll work (by opus4.7👎️, gemini3.1👍️)